fix(theme-default): fix z-index in weekly

--- a/packages/theme-default/src/components/calendar/view-week/week-wrapper.scss
+++ b/packages/theme-default/src/components/calendar/view-week/week-wrapper.scss
@@ -13,7 +13,7 @@
 .sx__week-header {
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: var(--sx-z-index-week-header);
   background-color: var(--sx-color-background);
 }
 
